--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,12 @@
 name: Build
 
-on: push
+on:
+  push:
+    branches: [ master ]
 
 jobs:
-  release:
-    runs-on: ${{ matrix.os }}
-
-    permissions:
-      contents: write
+  create-release:
+    runs-on: ${{ matrix.os }}|
 
     strategy:
       matrix:
