--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "@electron/remote": "^2.1.2",
     "adm-zip": "^0.5.12",
+    "discord-rpc": "^4.0.1",
     "discord-rpc-patch": "^4.0.1",
+    "discord.js": "^14.16.3",
     "ejs": "^3.1.10",
     "ejs-electron": "^3.0.0",
     "electron-updater": "^6.1.8",
