--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "electron-updater": "^6.1.8",
     "fs-extra": "^11.1.1",
     "github-syntax-dark": "^0.5.0",
+    "glob": "^11.0.0",
     "got": "^11.8.5",
     "helios-core": "~2.2.1",
     "helios-distribution-types": "^1.3.0",
@@ -42,9 +43,12 @@
     "toml": "^3.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "electron": "^30.0.1",
     "electron-builder": "^24.13.3",
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "postcss-loader": "^8.1.1",
+    "tailwindcss": "^3.4.15"
   },
   "repository": {
     "type": "git",
